--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
+    "fix": "^0.0.3",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^3.19.10",
     "react": "^17.0.2",
