--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "maintenance_manager",
   "version": "0.1.0",
+  "proxy": "http://localhost:8000",
+  "homepage": "http://localhost:8000",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
