--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "http://localhost:3000",
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^5.6.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
